k8s/grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: flask
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
